Java Concepts - I18N - NumberFormat Updated